SFDCProject/src/objects/Partner_Promotions__c.object
<CustomObject>
    <description>Relationship between partners and promotions</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Account_Type__c</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Promotions (Partner Account)</relationshipLabel>
        <relationshipName>Partner_Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Partner Promotions</relationshipLabel>
        <relationshipName>Promotion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Generation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Partner Promotions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>Promotion__c</columns>
        <columns>Role__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Partner Promotions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date_less_than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorMessage>End Date can not be less than Start Date</errorMessage>
    </validationRules>
</CustomObject>